--- a/2_FUNDAMENTOS/2_Fundamentos/src/App.css
+++ b/2_FUNDAMENTOS/2_Fundamentos/src/App.css
@@ -18,6 +18,10 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+h1 {
+  color: rgb(28, 28, 71);
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
